--- a/java-cicd-project/spring-boot-app/JenkinsFile
+++ b/java-cicd-project/spring-boot-app/JenkinsFile
@@ -36,7 +36,7 @@ pipeline {
     steps{
         script{
             echo 'docker image build'
-  sh 'cd Application && docker build -t rajudonkeshwar/java:${BUILD_NUMBER} .'
+  sh 'cd java-cicd-project/spring-boot-app && docker build -t rajudonkeshwar/java:${BUILD_NUMBER} .'
         }
     }
 }
