--- a/java-cicd-project/spring-boot-app/JenkinsFile
+++ b/java-cicd-project/spring-boot-app/JenkinsFile
@@ -30,6 +30,37 @@ pipeline {
 }
 
 
+
+
+stage('Dependency Check') {
+    steps {
+        sh '''
+            dependency-check.sh \
+            --project "SpringBootApp" \
+            --scan java-cicd-project/spring-boot-app \
+            --format HTML \
+            --out dependency-check-report
+        '''
+    }
+}
+
+
+
+
+    stage('Publish Report') {
+        steps {
+            publishHTML([
+                allowMissing: false,
+                alwaysLinkToLastBuild: true,
+                keepAll: true,
+                reportDir: 'dependency-check-report',
+                reportFiles: 'dependency-check-report.html',
+                reportName: 'OWASP Dependency-Check Report'
+            ])
+        }
+    }
+
+
     stage('Building the code') {
       steps {
         sh 'ls -ltr'
