i edited jenkins and maven file

--- a/java-cicd-project/spring-boot-app/JenkinsFile
+++ b/java-cicd-project/spring-boot-app/JenkinsFile
@@ -35,11 +35,12 @@ pipeline {
 stage('Dependency Check') {
     steps {
         sh '''
-            /opt/dependency-check/bin/dependency-check.sh \
-            --project "SpringBootApp" \
-            --scan java-cicd-project/spring-boot-app \
-            --format HTML \
-            --out dependency-check-report
+          /opt/dependency-check/bin/dependency-check.sh \
+          --project "SpringBootApp" \
+          --scan java-cicd-project/spring-boot-app \
+          --format HTML \
+          --data $WORKSPACE/odc-data \
+          --out dependency-check-report
         '''
     }
 }
