--- a/java-cicd-project/spring-boot-app/JenkinsFile
+++ b/java-cicd-project/spring-boot-app/JenkinsFile
@@ -33,6 +33,7 @@ pipeline {
 
 
 stage('Dependency Check') {
+    
     steps {
         sh '''
           /opt/dependency-check/bin/dependency-check.sh \
@@ -82,11 +83,11 @@ stage('Dependency Check') {
     }
 }
 		
-//     stage('docker image scan'){
-//     steps{
-//         sh "trivy image rajudonkeshwar/java:${BUILD_NUMBER}"
-//     }
-// }		
+    stage('docker image scan'){
+    steps{
+        sh "trivy image rajudonkeshwar/java:${BUILD_NUMBER}"
+    }
+}		
 
 
 stage('Push image to Hub'){
